--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center row-bg1">
           <div class="col-lg-2 col-md-6 col-6">
             <div class="vl-logo">
-              <a href="index-2.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
+              <a href="index.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
             </div>
           </div>
           <div class="col-lg-7 d-none d-lg-block">
@@ -55,7 +55,7 @@
               <nav class="vl-mobile-menu-active">
                 <ul>
                   <li class="has-dropdown">
-                    <a href="index4.html">Home <span></span></a>
+                    <a href="index.html">Home <span></span></a>
                     
                   </li>
                   <li class="has-dropdown">
@@ -77,7 +77,7 @@
                       <li><a href="property-details-v2.html">Property Details 02</a></li>
                     </ul>
                   </li>
-                  <li><a href="#">Blogs <span></span></a>
+                  <li><a href="testmonial.html">Testimonial <span></span></a>
                     
                   </li>
                   <li class="has-dropdown">
