--- a/about-us.html
+++ b/about-us.html
@@ -491,7 +491,7 @@
       <div class="row gy-4">
         
         <!-- Logo and About -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-12">
           <div class="footer-time-area">
             <img src="assets/img/logo/logo sree.png" alt="housa" class="img-fluid mb-3">
             <p>Your trusted partner for buying, selling, and renting properties with seamless, personalized solutions.</p>
@@ -499,7 +499,7 @@
         </div>
   
         <!-- Quick Links -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-2 col-md-12">
           <div class="footer-widget-area">
             <h3>Links</h3>
             <ul class="list-unstyled">
@@ -513,7 +513,7 @@
         </div>
   
         <!-- Social Media -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-2 col-md-12">
           <div class="footer-widget-area">
             <h3>Follow Us</h3>
             <ul class="list-unstyled mt-3">
@@ -531,10 +531,11 @@
           <div class="footer-widget-area">
             <h3>Contact Us</h3>
             <ul class="list-unstyled mt-3">
-              <li><a href="tel:+11234567890"><i class="fa-solid fa-phone me-2"></i>+1 123 456 7890</a></li>
-              <li><a href="#"><i class="fa-solid fa-location-dot me-2"></i>421 Allen, Mexico</a></li>
-              <li><a href="mailto:Housa@gmailcom"><i class="fa-solid fa-envelope me-2"></i>Housa@gmailcom</a></li>
-              <li><a href="#"><i class="fa-solid fa-globe me-2"></i>DemoHousa.com</a></li>
+              <li><a href="#"><i class="fa-solid fa-location-dot me-2"></i>43 A,Near Sivan Kovil,<br><br> Rajapathai, Vadasery,
+                <br><br>  Nagercoil - 629001.</a></li>
+              <li><a href="tel:+11234567890"><i class="fa-solid fa-phone me-2"></i>+91 9843962999</a></li>
+              <li><a href="mailto:Housa@gmailcom"><i class="fa-solid fa-envelope me-2"></i>sreekrishnafoundationkk@gmail.com</a></li>
+             
             </ul>
           </div>
         </div>
@@ -556,6 +557,7 @@
       </div>
     </div>
   </div>
+  
   <!--===== FOOTER AREA ENDS =======-->
   <div class="space32"></div>
   <!--===== JS SCRIPT LINK =======-->
