--- a/property-halfmap-grid_vedio.html
+++ b/property-halfmap-grid_vedio.html
@@ -20,8 +20,9 @@
   <link rel="stylesheet" href="assets/css/plugins/swiper-slider.css">
   <link rel="stylesheet" href="assets/css/plugins/odometer.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magnific-popup/dist/magnific-popup.css">
 </head>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magnific-popup/dist/magnific-popup.css">
 <body class="body1" style="overflow-x: hidden !important;">
   <!--===== PRELOADER STARTS =======-->
   <div class="preloader">
@@ -134,11 +135,13 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="inner-header heading1">
-            <h2>Contact Us</h2>
+            <h2>Property Half Map Grid</h2>
             <div class="space28"></div>
-            <p><a href="index-2.html">Home</a> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
+            <p><a href="index.html">Home</a> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                 <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg> Contact Us</p>
+              </svg> <span>Listing</span> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
+                <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg> Property Half Map Grid</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -149,164 +152,75 @@
       </div>
     </div>
   </div>
+  <div class="space20"></div>
   <!--===== HERO AREA ENDS =======-->
-  <div class="space30"></div>
-  <!--===== CONTACT AREA STARTS =======-->
-  <div class="contact-inner">
-    <div class="container-fluid">
+  <!--===== PROPERTY AREA STARTS =======-->
+  <div class="vl-blog-4-area sp2">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <div class="phone-number">
-            <div class="img1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
-                <path
-                  d="M5.83333 24.0013L12.5 16.0013M27.1667 24.0013L20.5 16.0013M4.5 10.668L14.1333 17.0901C14.9887 17.6604 15.4163 17.9456 15.8785 18.0562C16.2871 18.1542 16.7129 18.1542 17.1215 18.0562C17.5837 17.9456 18.0113 17.6604 18.8667 17.0901L28.5 10.668M8.76667 25.3346H24.2333C25.7268 25.3346 26.4736 25.3346 27.044 25.044C27.5457 24.7884 27.9537 24.3804 28.2093 23.8786C28.5 23.3082 28.5 22.5614 28.5 21.068V10.9346C28.5 9.44117 28.5 8.69442 28.2093 8.124C27.9537 7.62222 27.5457 7.21428 27.044 6.95862C26.4736 6.66797 25.7268 6.66797 24.2333 6.66797H8.76667C7.2732 6.66797 6.52645 6.66797 5.95603 6.95862C5.45425 7.21428 5.04631 7.62222 4.79065 8.124C4.5 8.69442 4.5 9.44116 4.5 10.9346V21.068C4.5 22.5614 4.5 23.3082 4.79065 23.8786C5.04631 24.3804 5.45425 24.7884 5.95603 25.044C6.52645 25.3346 7.27319 25.3346 8.76667 25.3346Z"
-                  stroke="#ED8438" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <div class="content">
-              <p>Our Email</p>
-              <a href="mailto: sreekrishnafoundationkk@gmail.com"> sreekrishnafoundationkk@gmail.com</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="phone-number">
-            <div class="img1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                <path
-                  d="M18.7333 7.99935C20.0357 8.25344 21.2325 8.89036 22.1708 9.8286C23.1091 10.7668 23.746 11.9637 24 13.266M18.7333 2.66602C21.4391 2.9666 23.9621 4.17824 25.8884 6.10203C27.8145 8.0258 29.0295 10.5474 29.3333 13.2527M24.6667 27.9993C13.2528 27.9993 4 18.7465 4 7.33268C4 6.81772 4.01884 6.30716 4.05585 5.80166C4.09833 5.22151 4.11957 4.93144 4.2716 4.66739C4.39752 4.4487 4.62067 4.2413 4.84797 4.13168C5.12241 3.99935 5.44251 3.99935 6.08268 3.99935H9.83909C10.3774 3.99935 10.6466 3.99935 10.8774 4.08795C11.0812 4.16622 11.2627 4.29334 11.4059 4.45815C11.568 4.64472 11.66 4.8977 11.844 5.40363L13.3988 9.67942C13.6128 10.2681 13.7199 10.5624 13.7017 10.8416C13.6857 11.0878 13.6016 11.3248 13.4589 11.5261C13.2971 11.7544 13.0286 11.9155 12.4915 12.2378L10.6667 13.3327C12.2692 16.8645 15.1335 19.7325 18.6667 21.3327L19.7616 19.5079C20.0839 18.9707 20.2449 18.7021 20.4732 18.5404C20.6745 18.3977 20.9115 18.3136 21.1577 18.2976C21.4369 18.2795 21.7313 18.3865 22.32 18.6005L26.5957 20.1553C27.1016 20.3393 27.3547 20.4313 27.5412 20.5935C27.706 20.7367 27.8332 20.9181 27.9113 21.122C28 21.3527 28 21.6219 28 22.1603V25.9167C28 26.5568 28 26.877 27.8676 27.1514C27.758 27.3787 27.5507 27.6019 27.332 27.7278C27.0679 27.8798 26.7779 27.9009 26.1977 27.9435C25.6921 27.9805 25.1816 27.9993 24.6667 27.9993Z"
-                  stroke="#ED8438" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <div class="content">
-              <p>Phone</p>
-              <a href="tel:+91 9894239718">+91 9894239718, +91 9655701001</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="phone-number">
-            <div class="img1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                <path d="M16.0013 29.3327C23.3651 29.3327 29.3346 23.3631 29.3346 15.9993C29.3346 8.63555 23.3651 2.66602 16.0013 2.66602C8.63751 2.66602 2.66797 8.63555 2.66797 15.9993C2.66797 23.3631 8.63751 29.3327 16.0013 29.3327Z" stroke="#ED8438" stroke-width="2.5" />
-                <path
-                  d="M16.6314 9.15785C16.6314 8.51839 16.113 8 15.4735 8C14.8341 8 14.3157 8.51839 14.3157 9.15785H16.6314ZM18.6079 18.3738C18.1557 17.9217 17.4227 17.9217 16.9706 18.3738C16.5184 18.826 16.5184 19.559 16.9706 20.0112L18.6079 18.3738ZM19.2862 22.3269C19.7384 22.7791 20.4714 22.7791 20.9236 22.3269C21.3758 21.8747 21.3758 21.1417 20.9236 20.6895L19.2862 22.3269ZM14.3157 9.15785V14.5611H16.6314V9.15785H14.3157ZM16.9706 20.0112L19.2862 22.3269L20.9236 20.6895L18.6079 18.3738L16.9706 20.0112ZM16.6314 16.8768C16.6314 17.5163 16.113 18.0347 15.4735 18.0347V20.3504C17.3919 20.3504 18.9471 18.7951 18.9471 16.8768H16.6314ZM15.4735 18.0347C14.8341 18.0347 14.3157 17.5163 14.3157 16.8768H12C12 18.7951 13.5552 20.3504 15.4735 20.3504V18.0347ZM14.3157 16.8768C14.3157 16.2374 14.8341 15.719 15.4735 15.719V13.4033C13.5552 13.4033 12 14.9585 12 16.8768H14.3157ZM15.4735 15.719C16.113 15.719 16.6314 16.2374 16.6314 16.8768H18.9471C18.9471 14.9585 17.3919 13.4033 15.4735 13.4033V15.719Z"
-                  fill="#ED8438" />
-              </svg>
-            </div>
-            <div class="content">
-              <p>Schedule</p>
-              <a href="tel:+11234567890">Sunday-Fri: 9 AM – 6 PM</a>
-            </div>
+        <div class="col-lg-10 m-auto">
+          <div class="vl-blog-1-section-box heading2 text-center space-margin60">
+            <h5><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                <path d="M2.5 20H4.5M4.5 20H10.5M4.5 20V11.452C4.5 10.918 4.5 10.651 4.565 10.402C4.62256 10.1819 4.71725 9.97322 4.845 9.78497C4.99 9.57197 5.191 9.39497 5.593 9.04397L10.394 4.84197C11.14 4.18997 11.513 3.86397 11.932 3.73997C12.302 3.62997 12.697 3.62997 13.067 3.73997C13.487 3.86397 13.861 4.18997 14.607 4.84397L19.407 9.04397C19.809 9.39597 20.01 9.57197 20.155 9.78397C20.283 9.9753 20.3763 10.1813 20.435 10.402C20.5 10.651 20.5 10.918 20.5 11.452V20M10.5 20H14.5M10.5 20V16C10.5 15.4695 10.7107 14.9608 11.0858 14.5858C11.4609 14.2107 11.9696 14 12.5 14C13.0304 14 13.5391 14.2107 13.9142 14.5858C14.2893 14.9608 14.5 15.4695 14.5 16V20M20.5 20H14.5M20.5 20H22.5" stroke="#ED8438" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
+              </svg> Our Real Estate Properties</h5>
+            <div class="space18"></div>
+            <h2>Our Properties</h2>
           </div>
         </div>
       </div>
-      <div class="space50"></div>
-	  
-	  
-      <div class="row">
-         <div class="col-lg-6">
-          <div class="choose-heading heading1">
-            <h2>Get in touch with us</h2>
+      <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-duration="900">
+        <div class="vl-blog-1-item">
+          <div class="vl-blog-1-thumb image-anime position-relative">
+            <a href="https://www.youtube.com/watch?v=T_rkRsL6t8o" class="popup-youtube ">
+              <img src="assets/img/all-images/blog/blog-img6.png" alt="video thumbnail" class="img-fluid">
+              <span style="
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 48px;
+                background: rgba(0, 0, 0, 0.6);
+                color: white;
+                border-radius: 50%;
+                width: 80px;
+                height: 80px;
+                display: flex;
+                align-items: center;
+                justify-content: center;">
+                <i class="fa-solid fa-play"></i>
+              </span>
+            </a>
+          </div>
+          <div class="vl-blog-1-content">
+            <div class="vl-blog-meta">
+              <ul>
+                <li>
+                  <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                      <path d="M17.4163 19.25V17.4167..." stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M10.9997 10.0833C13.0247..." stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    James Carter
+                  </a>
+                </li>
+              </ul>
+            </div>
             <div class="space16"></div>
-            <p>SREE KRISHNA FOUNDATION</p>
-            <div class="space24"></div>
-            <div class="choose-box">
-              <b>NAGERCOIL OFFICE:</b>
-              <div class="space16"></div>
-              <p>43 A, Near Sivan Kovil, Rajapathai, Vadasery,
-Nagercoil - 629001.</p>
-Phone: +91 9894239718, +91 9655701001<br>
-Email: sreekrishnafoundationkk@gmail.com<br/>
-
-            </div>
-            <div class="space24"></div>
-            <div class="choose-box">
-              <b href="our-service.html"></b>
-			  <b>TENKASI  OFFICE:</b>
-              <div class="space16"></div>
-              <p>5/69A, STM, Manner Complex, Bawa Medicals Upstairs,
-Pottal Puthur Main Road, Tenkasi - 627423.</p>
-Phone: +91 9894239718, +91 9655701001<br>
-Email: sreekrishnafoundationkk@gmail.com<br/>
-
-            </div>
-            <div class="space24"></div>
-            <div class="choose-box">
-              <a href="our-service.html"></a>
-			  <b></b>
-              <div class="space16"></div>
-              <p></p>
-            </div>
-            <div class="space32"></div>
-            <div class="btn-area1">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="contact-boxarea">
-            <div class="bg-area">
-              <h3>Send Us A Message</h3>
-              <div class="space8"></div>
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="input-area">
-                    <input type="text" placeholder="Your Name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-area">
-                    <input type="text" placeholder="Last Name*">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-area">
-                    <input type="number" placeholder="Phone Number ">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-area">
-                    <input type="email" placeholder="Email Address*">
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="input-area">
-                    <input type="text" placeholder="Service Type*">
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="input-area">
-                    <textarea placeholder="Your Message"></textarea>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="space16"></div>
-                  <div class="input-area text-end">
-                    <button type="submit" class="vl-btn1">Submit Now <span class="arrow1"><i class="fa-solid fa-arrow-right"></i></span><span class="arrow2"><i class="fa-solid fa-arrow-right"></i></span></button>
-                  </div>
-                </div>
-              </div>
+            <h4 class="vl-blog-1-title">
+              <a href="blog-detail.html">How to Add Value to Your Home Luxury Modern Living Upgrades</a>
+            </h4>
+            <div class="space20"></div>
+            <div class="vl-blog-1-icon">
+              <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
       </div>
+      
+      
     </div>
   </div>
-  <div class="space30"></div>
-  <div class="maps-area">
-    <div class="containe-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="maps">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7898.185845762306!2d77.41555437770995!3d8.193394100000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f12a0940a849%3A0xf7df6732f9e204b1!2sSree%20Krishna%20Foundation!5e0!3m2!1sen!2sin!4v1744099531375!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
-      </div>
-    </div>
-  </div>
-  <!--===== CONTACT AREA ENDS =======-->
-  <!--===== FAQ AREA STARTS =======-->
-  <!--===== FAQ AREA ENDS =======-->
-  <div class="space30"></div>
+  <!--===== PROPERTY AREA ENDS =======-->
   <!--===== FOOTER AREA STARTS =======-->
   <div class="vl-footer4-section-area" style="background-image: url(assets/img/all-images/bg/team-bg1.png); background-position: center; background-repeat: no-repeat; background-size: cover; padding: 60px 0;">
     <div class="container">
@@ -379,7 +293,6 @@ Email: sreekrishnafoundationkk@gmail.com<br/>
       </div>
     </div>
   </div>
-  
   <!--===== FOOTER AREA ENDS =======-->
   <div class="space32"></div>
   <!--===== JS SCRIPT LINK =======-->
@@ -403,6 +316,7 @@ Email: sreekrishnafoundationkk@gmail.com<br/>
   <script src="assets/js/plugins/slick-slider.js"></script>
   <script src="assets/js/plugins/circle-progress.js"></script>
   <script src="assets/js/main.js"></script>
+  
 </body>
 
 
